--- a/index.html
+++ b/index.html
@@ -7,5 +7,18 @@
   </head>
   <body>
     <h1>Discover hidden places in the world around you</h1>
+    <p><a class="download" href="#">Download Excursion (Coming soon!)</a></p>
+    <video autoplay muted loop>
+      <source src="resources/videos/excursion.mp4" type="video/mp4">
+    </video>
+    <h2>Your personal travel guide</h2>
+    <h3>Excursion remembers places you like, and recommends new points of interest around you.</h3>
+    <img src="resources/images/camp.jpg" alt="">
+    <img src="resources/images/phone.png" alt="">
+    <h2>Coming Soon for iPhone and Android</h2>
+    <p><a class="download" href="#">Download Excursion (Coming soon!)</a></p>
+    <footer>
+      <p>&copy; Excursion</p>
+    </footer>
   </body>
 </html>
