--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <h2>Your personal travel guide</h2>
     <h3>Excursion remembers places you like, and recommends new points of interest around you.</h3>
     <img src="resources/images/camp.jpg" alt="">
-    <img src="resources/images/phone.png" alt="">
+    <p><img src="resources/images/phone.png" alt=""></p>
     <h2>Coming Soon for iPhone and Android</h2>
     <p><a class="download" href="#">Download Excursion (Coming soon!)</a></p>
     <footer>
